# BLE-Connect

./: .gitignore  ExerWatchb018_02-02_07-43.csv  ble_notifications.py  ble_scanner.py  exer-ble.yaml  exports_viewer.ipynb  main.py  quaternion.py  requirements_new.txt
ble_connect/: BLEConnect.py  BLEDeviceWidget.py  DataViewer.py  GraphRegion.py  IMUData.py  IMUDataPlot.py  IMUDataWidget.py  LayoutHelper.py  SensorDevice.py  SensorDeviceWidget.py  WitSensor.py  config.py  themes.py
data/: ExerWatch80eb_02-02_20-04.csv  ExerWatch80eb_02-02_20-06.csv  ExerWatch80eb_02-02_20-09.csv  ExerWatchb018_02-02_03-12.csv  ExerWatchb018_02-02_03-14.csv  ExerWatchb018_02-02_19-46.csv  exerWatch-20250202_1612271076352245711226980.csv
data/26-03_19-21/: ExerWatchccec_26-03_19-21.pkl  ExerWatchccec_IMU_26-03_19-21.csv  ExerWatchccec_proto_26-03_19-21.csv
exer-ble-gui/: ExerWatch-BLE.py  main.py  pyproject.toml
